--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>htmlcss-discord</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
+        <section class="upper conteiner flex">
+            <div class="logo">
+                <img src="img/logo.svg" alt="Discord logo">
+            </div>
+            <nav>
+                <ul class="flex text-white">
+                    <li>Scarica</li>
+                    <li>Perché Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </nav>
+            <div class=" logo login">
+                <input type="button" value="Accedi">
+            </div>
+        </section>
 
-        
     </header>
 </body>
 </html>
