--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
             </div>
         </section>
 
+        <section class="flex top-space">
+            <div class="lower conteiner text-white margin-bottom">
+                <h1 class="margin-bottom">
+                  Il  tuo Posto per parlare
+                </h1>
+                <p class="margin-bottom">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo du amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso </p>
+                <input type="button" value="&#8595;Scarica per Mac">
+                <input type="button" value="Apri Discord nel tuo browser" class="black">
+            </div>
+
+        </section>
+
     </header>
 </body>
 </html>
