first main section

--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
                 <input type="button" value="&#8595;Scarica per Mac">
                 <input type="button" value="Apri Discord nel tuo browser" class="black">
             </div>
-
         </section>
-
     </header>
+    <main>
+        <section class="flex upper">
+            <div class="contenier">
+                <img src="img/item1.svg" alt="discord group chat" class="main-image">
+            </div>
+            <div class="side-test">
+                <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
+        </section>
+    
+    </main>
 </body>
 </html>
