--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
                   Il  tuo Posto per parlare
                 </h1>
                 <p class="margin-bottom">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo du amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso </p>
-                <input type="button" value="&#8595;Scarica per Mac">
+                <input type="button" value="&#8595; Scarica per Mac">
                 <input type="button" value="Apri Discord nel tuo browser" class="black">
             </div>
         </section>
     </header>
     <main>
-        <section class="flex upper">
-            <div class="contenier">
-                <img src="img/item1.svg" alt="discord group chat" class="main-image">
-            </div>
-            <div class="side-test">
-                <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
-                <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
-            </div>
+        <section class="flex conteiner">
+                <div>
+                    <img src="img/item1.svg" alt="discord group chat" class="main-image">
+                </div>
+                <div class="side-test">
+                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>    
         </section>
     
     </main>
