fix first section

--- a/index.html
+++ b/index.html
@@ -13,26 +13,28 @@
 </head>
 <body>
     <header>
-        <section class="upper conteiner flex">
-            <div class="logo">
-                <img src="img/logo.svg" alt="Discord logo">
-            </div>
-            <nav>
-                <ul class="flex text-white">
-                    <li>Scarica</li>
-                    <li>Perché Discord</li>
-                    <li>Nitro</li>
-                    <li>Sicurezza</li>
-                    <li>Assistenza</li>
-                </ul>
-            </nav>
-            <div class=" logo login">
-                <input type="button" value="Accedi">
-            </div>
+        <section>
+            <div class="upper container flex">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="Discord logo">
+                </div>
+                <nav>
+                    <ul class="flex text-white">
+                        <li>Scarica</li>
+                        <li>Perché Discord</li>
+                        <li>Nitro</li>
+                        <li>Sicurezza</li>
+                        <li>Assistenza</li>
+                    </ul>
+                </nav>
+                <div class=" logo login">
+                    <input type="button" value="Accedi">
+                </div>
+            </div>    
         </section>
 
         <section class="flex top-space">
-            <div class="lower conteiner text-white margin-bottom">
+            <div class="lower container text-white margin-bottom">
                 <h1 class="margin-bottom">
                   Il  tuo Posto per parlare
                 </h1>
@@ -43,13 +45,15 @@
         </section>
     </header>
     <main>
-        <section class="flex conteiner">
-                <div>
-                    <img src="img/item1.svg" alt="discord group chat" class="main-image">
-                </div>
-                <div class="side-test">
-                    <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                    <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+        <section>
+                <div class="flex container padding">
+                    <div class="main-image">
+                        <img src="img/item1.svg" alt="discord group chat">
+                    </div>
+                    <div class="side-text padding">
+                        <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                        <p>I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                    </div>
                 </div>    
         </section>
     
