first section fix

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section>
                 <div class="flex container padding">
                     <div class="main-image">
-                        <img src="img/item1.svg" alt="discord group chat">
+                        <img src="img/item1.svg" alt="discord group chat" class="image-size">
                     </div>
                     <div class="side-text padding">
                         <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
