third section main

--- a/index.html
+++ b/index.html
@@ -56,6 +56,30 @@
                     </div>
                 </div>    
         </section>
+
+        <section>
+            <div class="flex container padding">
+                <div class="side-text padding">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chimare.</p>
+                </div>
+                <div class="main-image">
+                    <img src="img/item2.svg" alt="discord group chat" class="image-size">
+                </div>
+            </div>    
+    </section>
+
+    <section>
+        <div class="flex container padding">
+            <div class="main-image">
+                <img src="img/item3.svg" alt="discord group chat" class="image-size">
+            </div>
+            <div class="side-text padding">
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
+        </div>
+</section>
     
     </main>
 </body>
